@startuml violoes
!define RECTANGLE
skinparam classAttributeIconSize 0

Abstract class Violao {
  - id: Long
  - nome: String
  - precoBase: BigDecimal
  - anoFabricacao: Integer
}

together{
  class ViolaoAco {
  }
  enum GaugeCorda {
    EXTRA_LIGHT
    LIGHT
    MEDIUM
    HEAVY
  }

}

together{
  class ViolaoNylon {
  }
  enum TensaoCorda {
    BAIXA
    MEDIA
    ALTA
  }
}

class Marca {
  - id: Long
  - nome: String
  - paisOrigem: String
  - website: String
}

class PerfilBraco {
  - id: Long
  - nome: String
  - formato: String
  - espessura: Double
}

class Madeira {
  - id: Long
  - tipo: String
  - densidade: String
  - sonoridade: String
}

class Acessorio {
  - id: Long
  - nome: String
  - descricao: String
  - quantidadeEstoque: Integer
  - precoUnitario: BigDecimal
}

' Relacionamentos

Violao <|-down- ViolaoNylon
Violao <|-down- ViolaoAco

Violao "*" o-- "1" PerfilBraco
Violao "*" o-up- "1" Marca

ViolaoNylon -[hidden]- TensaoCorda
ViolaoNylon *-- TensaoCorda
ViolaoAco -[hidden]- GaugeCorda
ViolaoAco *-- GaugeCorda

Violao "1" o-left- "*" Madeira

Violao "*" o--right- "*" Acessorio

@enduml